--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fullcalendar/daygrid": "^6.1.15",
         "@fullcalendar/interaction": "^6.1.15",
         "@fullcalendar/timegrid": "^6.1.15",
-        "epic-spinners": "^2.0.0"
+        "epic-spinners": "^2.0.0",
+        "react-loader-spinner": "^6.1.6"
     }
 }
